# FastBT

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Data/: XAUUSD.csv  equity.csv  performance.txt  trades.csv
FastBT/: CMakeLists.txt
FastBT/include/: analyzer.h  broker.h  btcore.h  datafeeder.h  dtype.h  numeric.h  order.h  position.h  strategy.h  symbol.h  trade.h  utils.h
FastBT/src/: analyzer.cpp  broker.cpp  trade.cpp
FastBT/src/btcore/: btcore.cpp
FastBT/src/data/: datafeeder.cpp
FastBT/src/order/: order.cpp
FastBT/src/position/: position.cpp
FastBT/src/strategy/: strategy.cpp
tests/: CMakeLists.txt  test_btcore.cpp  test_ohlc.cpp
